--- a/.github/workflows/passwall2.yml
+++ b/.github/workflows/passwall2.yml
@@ -13,7 +13,7 @@ on:
       package_version:
         description: '这里是包版本'
         required: false
-        default: 'packages-24.10'  
+        default: 'packages-22.03.7'
 
 jobs:
   build:
@@ -27,17 +27,17 @@ jobs:
         run: |
           git clone https://github.com/megastep/makeself.git
 
-      - name: Create directories for x86_64 and a53 and set PACKAGE_VERSION
+      - name: Create directories for x86_64 and set PACKAGE_VERSION
         run: |
-          mkdir -p x86_64/depends a53/depends
+          mkdir -p x86_64/depends
           package_version="${{ github.event.inputs.package_version }}"
           if [ -z "$package_version" ]; then
-            package_version="packages-24.10"
+            package_version="packages-22.03.7"
           fi
           echo "PACKAGE_VERSION=$package_version" >> $GITHUB_ENV
          
 
-      - name: Download ipk files for x86_64 and a53
+      - name: Download ipk files for x86_64
         run: |
           echo "Get PACKAGE_VERSION=$PACKAGE_VERSION"
           
@@ -72,65 +72,12 @@ jobs:
                     fi
               done
           done
-
-          BASE_URL_A53="https://dl.openwrt.ai/$PACKAGE_VERSION/aarch64_cortex-a53/kiddin9/"
-          echo "Fetching a53 directory page from $BASE_URL_A53"
-          wget -qO- "$BASE_URL_A53" | \
-          while IFS= read -r LINE; do
-              for PREFIX in "${FILE_PREFIXES[@]}"; do
-                  if [[ "$LINE" == *"$PREFIX"* ]]; then
-                      FILE=$(echo "$LINE" | grep -oP 'href="\K[^"]*')
-                      if [[ -z "$FILE" ]]; then
-                          # echo "No file found in line, skipping"
-                          continue
-                      fi
-                      exclude_file=false
-                      for exclude_prefix in "${EXCLUDE_PREFIXES[@]}"; do
-                          if [[ "$FILE" == $exclude_prefix* ]]; then
-                              exclude_file=true
-                              break
-                          fi
-                      done
-                      if $exclude_file; then
-                          echo "Skip file: $FILE"
-                          continue
-                      fi
-                      FILE_URL="${BASE_URL_A53}${FILE}"
-                      echo "Found file: $FILE_URL"
-                      curl -L --fail "$FILE_URL" -o "a53/depends/$(basename $FILE_URL)" -#
-                  fi
-              done
-          done
-
-      - name: download sing-box for a53 form aarch64_generic dir
-        run: |
-          SINGBOX_PREFIXES=("sing-box")
-          BASE_URL_A53="https://dl.openwrt.ai/packages-24.10/aarch64_generic/kiddin9/"
-          echo "for sing-box Fetching a53 directory page from $BASE_URL_A53"
-          wget -qO- "$BASE_URL_A53" | \
-          while IFS= read -r LINE; do
-              for PREFIX in "${SINGBOX_PREFIXES[@]}"; do
-                  if [[ "$LINE" == *"$PREFIX"* ]]; then
-                      FILE=$(echo "$LINE" | grep -oP 'href="\K[^"]*')
-                      if [[ -z "$FILE" ]]; then
-                          # echo "No file found in line, skipping"
-                          continue
-                      fi
-                      FILE_URL="${BASE_URL_A53}${FILE}"
-                      echo "Found file: $FILE_URL"
-                      curl -L --fail "$FILE_URL" -o "a53/depends/$(basename $FILE_URL)" -#
-                  fi
-              done
-          done
         
       - name: mv pw2 to main dir
         run: |
           mv x86_64/depends/luci-app-passwall2*.ipk x86_64
-          mv a53/depends/luci-app-passwall2*.ipk a53
           echo "List main dir ipk files for x86"
           ls x86_64
-          echo "List main dir ipk files for a53"
-          ls a53
       
       - name: downloads libopenssl3 & libudns ipk
         run: |
@@ -152,22 +99,6 @@ jobs:
                   fi
             done
           done
-          BASE_URL_A53="https://dl.openwrt.ai/$PACKAGE_VERSION/aarch64_cortex-a53/base/"
-          wget -qO- "$BASE_URL_A53" | \
-          while IFS= read -r LINE; do
-              for PREFIX in "${FILE_PREFIXES[@]}"; do
-                  if [[ "$LINE" == *"$PREFIX"* ]]; then
-                      FILE=$(echo "$LINE" | grep -oP 'href="\K[^"]*')
-                      if [[ -z "$FILE" ]]; then
-                          # echo "No file found in line, skipping"
-                          continue
-                      fi
-                      FILE_URL="${BASE_URL_A53}${FILE}"
-                      echo "Found file: $FILE_URL"
-                      curl -L --fail "$FILE_URL" -o "a53/depends/$(basename $FILE_URL)" -#
-                    fi
-              done
-          done
           echo "downloading libudns ipk"
           BASE_URL_X86="https://dl.openwrt.ai/$PACKAGE_VERSION/x86_64/packages/"
           wget -qO- "$BASE_URL_X86" | \
@@ -184,53 +115,28 @@ jobs:
                       curl -L --fail "$FILE_URL" -o "x86_64/depends/$(basename $FILE_URL)" -#
                 fi
             done
-          done
-          BASE_URL_A53="https://dl.openwrt.ai/$PACKAGE_VERSION/aarch64_cortex-a53/packages/"
-          wget -qO- "$BASE_URL_A53" | \
-          while IFS= read -r LINE; do
-            for PREFIX in "${FILE_PREFIXES[@]}"; do
-                if [[ "$LINE" == *"$PREFIX"* ]]; then
-                    FILE=$(echo "$LINE" | grep -oP 'href="\K[^"]*')
-                    if [[ -z "$FILE" ]]; then
-                        # echo "No file found in line, skipping"
-                        continue
-                    fi
-                    FILE_URL="${BASE_URL_A53}${FILE}"
-                    echo "Found file: $FILE_URL"
-                    curl -L --fail "$FILE_URL" -o "a53/depends/$(basename $FILE_URL)" -#
-                fi
-            done
-          done
-          
+          done          
 
       - name: List depends ipks
         run: |
           echo "List x86 depends ipk files"
-          ls -lh x86_64/depends/
-          echo "List a53 depends ipk files"
-          ls -lh a53/depends/
-          
+          ls -lh x86_64/depends/          
       
       - name: Create install.sh 
         run: |
             echo -e "#!/bin/sh\n\nopkg update\nif [ \$? -ne 0 ]; then\n    echo \"update failed\"\n    exit 1\nfi\nopkg install depends/*.ipk --force-depends\nopkg install *.ipk --force-depends" > x86_64/install.sh
             chmod +x x86_64/install.sh
-            cp x86_64/install.sh a53/
   
       - name: Create self-extracting archives
         run: |
             mv -f x86_64 makeself
-            mv -f a53 makeself
             cd makeself
             ipk_file=$(ls x86_64/*.ipk)
             appversion=$(basename "$ipk_file" | grep -oP '\d+\.\d+\.\d+')
             echo "APP_VERSION=$appversion" >> $GITHUB_ENV
             release_name=$(TZ="Asia/Shanghai" date +'%Y-%m-%d %H:%M Build')
             echo "RELEASE_NAME=$release_name" >> $GITHUB_ENV
-            ./makeself.sh x86_64/ passwall2_x86_64_$appversion.run "by github action" ./install.sh
-            ./makeself.sh a53/ passwall2_aarch64_cortex-a53_$appversion.run "by github action" ./install.sh
-            
-            
+            ./makeself.sh x86_64/ passwall2_x86_64_$appversion.run "by github action" ./install.sh           
       
       - name: Upload all .run files to GitHub Release
         uses: softprops/action-gh-release@v2.1.0
