--- a/.github/workflows/passwall2.yml
+++ b/.github/workflows/passwall2.yml
@@ -150,7 +150,7 @@ jobs:
           mv -f x86_64 makeself
           cd makeself
           ipk_file=$(ls x86_64/luci-app-passwall2*.ipk)
-          appversion=$(basename "$ipk_file" | grep -oP '\d+\.\d+\.\d+')
+          appversion=$pw2_ver
           echo "APP_VERSION=$appversion" >> $GITHUB_ENV
           release_name=$(TZ="Asia/Shanghai" date +'%Y-%m-%d %H:%M Build')
           echo "RELEASE_NAME=$release_name" >> $GITHUB_ENV
