--- a/.github/workflows/passwall2.yml
+++ b/.github/workflows/passwall2.yml
@@ -92,8 +92,8 @@ jobs:
           echo "pw2_ver=$pw2_ver"
           pw2zh_ver=`ls source |grep luci-i18n|awk -F'[_-]' '{print $8}'`
           echo "pw2zh_ver=$pw2zh_ver"
-          mv source/*_luci-app-passwall2*.ipk x86_64/luci-app-passwall2_"$pw2_ver"_all.ipk
-          mv source/*_luci-i18n-passwall2-zh-cn*_all.ipk x86_64/luci-i18n-passwall2-zh-cn_"$pw2zh_ver"_all.ipk
+          cp source/*_luci-app-passwall2*.ipk x86_64/luci-app-passwall2_"$pw2_ver"_all.ipk
+          cp source/*_luci-i18n-passwall2-zh-cn*_all.ipk x86_64/luci-i18n-passwall2-zh-cn_"$pw2zh_ver"_all.ipk
           echo "List main dir ipk files for x86"
           ls x86_64
       
@@ -147,11 +147,10 @@ jobs:
   
       - name: Create self-extracting archives
         run: |
-          pw2_ver=`ls source |grep luci-app|awk -F'[_]' '{print $3}'`
+          appversion=`ls source |grep luci-app|awk -F'[_]' '{print $3}'`
           mv -f x86_64 makeself
           cd makeself
           ipk_file=$(ls x86_64/luci-app-passwall2*.ipk)
-          appversion=$pw2_ver
           echo "APP_VERSION=$appversion" >> $GITHUB_ENV
           release_name=$(TZ="Asia/Shanghai" date +'%Y-%m-%d %H:%M Build')
           echo "RELEASE_NAME=$release_name" >> $GITHUB_ENV
