--- a/.github/workflows/passwall2.yml
+++ b/.github/workflows/passwall2.yml
@@ -35,10 +35,20 @@ jobs:
 
           # 下载 x86_64 ipk
           curl -L -O $(
-            curl -s https://api.github.com/repos/Openwrt-Passwall/openwrt-passwall2/releases/latest \
+            curl -s https://api.github.com/repos/Openwrt-Passwall/openwrt-passwall2/releases/tag/26.1.1-1 \
             | jq -r '.assets[] | select(.name | test("passwall_packages_ipk_x86_64\\.zip")) | .browser_download_url'
           )
-          
+          # 下载luci_app_ipk
+          curl -L -O $(
+            curl -s https://api.github.com/repos/Openwrt-Passwall/openwrt-passwall2/releases/latest \
+            | jq -r '.assets[] | select(.name | test("luci-.*-passwall2.*\\.ipk")) | .browser_download_url' | head -1
+          )
+          # 下载luci语言包ipk
+          curl -L -O $(
+            curl -s https://api.github.com/repos/Openwrt-Passwall/openwrt-passwall2/releases/latest \
+            | jq -r '.assets[] | select(.name | test("luci-.*-passwall2.*\\.ipk")) | .browser_download_url' | tail -1
+          )
+      
       - name: Organize files for x86_64
         run: |
           mkdir -p passwall_x86_64/depends passwall_x86_64/main
