--- a/.github/workflows/passwall2.yml
+++ b/.github/workflows/passwall2.yml
@@ -11,6 +11,9 @@ name: NEW Make Passwall2 run files
 on:
   workflow_dispatch:
 
+env:
+  depends_tag: 26.1.1-1
+
 jobs:
   build:
     runs-on: ubuntu-22.04
@@ -33,10 +36,7 @@ jobs:
           mkdir -p downloads
           cd downloads
           # 下载 x86_64 ipk
-          curl -L -O $(
-            curl -s https://api.github.com/repos/Openwrt-Passwall/openwrt-passwall2/releases/tag/26.1.1-1 \
-            | jq -r '.assets[] | select(.name | test("passwall_packages_ipk_x86_64\\.zip")) | .browser_download_url'
-          )
+          curl -L -O https://github.com/Openwrt-Passwall/openwrt-passwall2/releases/download/$depends_tag/passwall_packages_ipk_x86_64.zip
           # 下载luci_app_ipk
           curl -L -O $(
             curl -s https://api.github.com/repos/Openwrt-Passwall/openwrt-passwall2/releases/latest \
